...
    <string name="status_no_background">Sync disabled - No background activity</string>
    <string name="status_poll_and_push_disabled">Polling and pushing disabled</string>
    <string name="status_syncing_blocked">Syncing blocked</string>
    <string name="status_syncing_off">Syncing disabled</string>

    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <!-- Used to confirm acceptance of dialog boxes, warnings, errors, etc. -->
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
...
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="forward_as_attachment_action">Forward as attachment</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
    <string name="refile_action">Refile…</string>
    <string name="done_action">Done</string>
    <string name="discard_action">Discard</string>
    <string name="save_draft_action">Save as draft</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="refresh_folders_action">Refresh folder list</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="bot_action">Bot</string>
    <string name="search_results">Search results</string>
    <string name="preferences_action">Settings</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
...
    <string name="account_setup_check_settings_check_outgoing_msg">Checking outgoing server settings\u2026</string>
    <string name="account_setup_check_settings_authenticate">Authenticating\u2026</string>
    <string name="account_setup_check_settings_fetch">Fetching account settings\u2026</string>
    <string name="account_setup_check_settings_canceling_msg">Canceling\u2026</string>

    <string name="account_setup_names_title">You\'re almost done!</string>
    <string name="account_setup_names_account_name_label">Give this account a name (optional):</string>
    <string name="account_setup_names_user_name_label">Type your name (displays on outgoing messages):</string>

    <string name="account_setup_account_type_title">Account type</string>
    <string name="account_setup_account_type_instructions">What kind of account is this?</string>
    <string name="account_setup_account_type_pop_action">POP3</string>
    <string name="account_setup_account_type_imap_action">IMAP</string>
    <string name="account_setup_account_type_webdav_action">Exchange (WebDAV)</string>
...
    <string name="unread_widget_all_messages_account_summary">All messages</string>
    <string name="unread_widget_folder_enabled_title">Folder count</string>
    <string name="unread_widget_folder_enabled_summary">Display the unread count of only a single folder</string>
    <string name="unread_widget_folder_title">Folder</string>
    <string name="unread_widget_folder_summary">The folder for which the unread count should be displayed</string>
    <string name="unread_widget_action_done">Done</string>
    <string name="unread_widget_title"><xliff:g id="account_name">%1$s</xliff:g> - <xliff:g id="folder_name">%2$s</xliff:g></string>
    <string name="unread_widget_account_not_selected">No account selected</string>
    <string name="unread_widget_folder_not_selected">No folder selected</string>

    <string name="import_dialog_error_title">Missing File Manager Application</string>
    <string name="close">Close</string>

...
