<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.fsck.k9.activity.BotActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/conversation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/userInput"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userInput"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="Ask Christopher"
        android:inputType="text"
        android:textColor="#fff"
        android:padding="12dp"
        android:imeActionId="4"
        android:imeOptions="actionSend"
        android:textColorHint="#fff"
        android:textSize="20sp"/>

</RelativeLayout>