...
        android:icon="?attr/iconActionRefresh"
        android:showAsAction="always"
        android:title="@string/check_mail_action"/>
    <!-- MessageList -->

    <item
        android:id="@+id/bot_redirect"
        android:icon="@drawable/ic_adb_black_24dp"
        android:showAsAction="always"
        android:title="@string/bot_action"/>

    <!-- sonia contact list button -->
    <item
...
